--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@ Project Website
     <title>Yudi's cute website</title>
   </head>
   <body>
-  <h1>This is a test</h1>
+  <h1>Yudi's cute website</h1>
+    <h2> This is a test </h2>
   <p>This is still a test </p>
   </body>
 </html>
