--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html>
   <head>
     <title>Yudi's cute website</title>
+    <style>
+      h1 {color:pink;}
+      h2 {color:pink;}
+      p {color:blue;}
+    </style>
   </head>
   <body>
   <h1>Yudi's cute website</h1>
