--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <title>Yudi's cute website</title>
     <style>
-      h1 {color: pink;}
+      h1 {color: pink;
+      text-align: center;
+      font-family: monospace;}
       h2 {color: pink;}
       p {color: blue;}
     </style>
