--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
       h1 {color: pink;
       text-align: center;
       font-family: monospace;}
-      h2 {color: pink;}
-      p {color: blue;}
+      h2 {color: pink;
+      text-align: center;
+      font-family: monospace}
+      p {color: black;
+      text-align: left;
+      font-family: monospace}
     </style>
   </head>
   <body>
